--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@ body {
   margin-bottom: 0;
 }
 
+#flightInfo {
+  background-color: #80808045;
+  width: 100vw;
+  height: 100vh;
+  padding: 0 40px
+}
+
 h1 {
   margin-top: 0;
   padding: 3%;
@@ -26,7 +33,13 @@ h1 {
 
 h3 {
   text-align: center;
-  margin-top: 28%
+  margin-top: 28%;
+}
+
+h2 {
+  color: #337ab7;
+  text-align: center;
+  margin-top: 28%;
 }
 
 #linkButton {
@@ -34,7 +47,8 @@ h3 {
 }
 
 #detailsButton {
-  margin-top: 28%
+  margin-top: 28%;
+  margin-left: 20px;
 }
 
 .homeBtn {
@@ -65,4 +79,52 @@ h3 {
 
 .loadingImg {
   margin-top:30vh;
+}
+
+.planeImg {
+  opacity: 0.5;
+}
+
+.logo {
+  margin-top: 15%;
+  margin-bottom: 15%;
+  text-align: center;
+}
+
+#table {
+  font-size: 18px
+}
+
+.logo5 {
+  height: 200px;
+  width: 250px;
+  position: absolute;
+  left: 300px;
+  top: 0px;
+  z-index: -1;
+
+  -webkit-animation: myOrbit 8s linear infinite; /* Chrome, Safari 5 */
+     -moz-animation: myOrbit 8s linear infinite; /* Firefox 5-15 */
+       -o-animation: myOrbit 8s linear infinite; /* Opera 12+ */
+          animation: myOrbit 8s linear infinite; /* Chrome, Firefox 16+ */
+}
+
+@-webkit-keyframes myOrbit {
+  from { -webkit-transform: rotate(0deg) translateX(25vh) rotate(0deg); }
+  to   { -webkit-transform: rotate(360deg) translateX(25vh) rotate(-360deg); }
+}
+
+@-moz-keyframes myOrbit {
+  from { -moz-transform: rotate(0deg) translateX(25vh) rotate(0deg); }
+  to   { -moz-transform: rotate(360deg) translateX(25vh) rotate(-360deg); }
+}
+
+@-o-keyframes myOrbit {
+  from { -o-transform: rotate(0deg) translateX(25vh) rotate(0deg); }
+  to   { -o-transform: rotate(360deg) translateX(25vh) rotate(-360deg); }
+}
+
+@keyframes myOrbit {
+  from { transform: rotate(0deg) translateX(25vh) rotate(0deg); }
+  to   { transform: rotate(360deg) translateX(25vh) rotate(-360deg); }
 }
