--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Georgia, serif;
   font-size: 16px
 }
 
@@ -25,9 +25,10 @@ h1 {
   text-align: center;
 }
 
-.title {
-  margin: 50px;
+h2 {
+  color: #337ab7;
   text-align: center;
+  margin-top: 28%;
 }
 
 h3 {
@@ -35,10 +36,9 @@ h3 {
   margin-top: 45px;
 }
 
-h2 {
-  color: #337ab7;
+.title {
+  margin: 50px;
   text-align: center;
-  margin-top: 28%;
 }
 
 #linkButton {
@@ -81,8 +81,9 @@ h2 {
 }
 
 .planeImg {
-  opacity: 0.5;
-  width: 100%
+  opacity: 0.6;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .logo {
